hphp/test/slow/traits/requireclass/requireclass_hierarchy_03.bad.php.expectf
Fatal error: Non final class 'D' uses trait 'T', but trait 'T' may only be used from class 'C', which must be final in %s/requireclass_hierarchy_03.bad.php on line 12
